--- a/Niania/Info.plist
+++ b/Niania/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need it to hear for your child crying.</string>
 </dict>
 </plist>
